RESOLVED FIXED 255850
[IFC][line-clamp] LineLayout::contentBoxLogicalHeight should not depend on current RenderLayoutState
https://bugs.webkit.org/show_bug.cgi?id=255850
Summary [IFC][line-clamp] LineLayout::contentBoxLogicalHeight should not depend on cu...
alan
Reported 2023-04-23 21:02:56 PDT
ssia
Attachments
[fast-cq]Patch (4.70 KB, patch)
2023-04-23 21:07 PDT, alan
no flags
alan
Comment 1 2023-04-23 21:07:37 PDT
Created attachment 466057 [details] [fast-cq]Patch
EWS
Comment 2 2023-04-24 06:46:46 PDT
Committed 263309@main (8950ba894583): <https://commits.webkit.org/263309@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466057 [details].
Radar WebKit Bug Importer
Comment 3 2023-04-24 06:47:19 PDT
Note You need to log in before you can comment on or make changes to this bug.