[IFC][line-clamp] LineLayout::contentBoxLogicalHeight should not depend on current RenderLayoutState https://bugs.webkit.org/show_bug.cgi?id=255850

Reviewed by Antti Koivisto.

RenderLayoutState is only available during layout and while currently we call contentBoxLogicalHeight
only at layout, it should use the truncated flag instead.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::contentBoxLogicalHeight const):
(WebCore::LayoutIntegration::LineLayout::lastLineIndexForContentHeight const): Deleted.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:

Canonical link: https://commits.webkit.org/263309@main