Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h
@@ -164,7 +164,6 @@ private:
     Layout::ElementBox& rootLayoutBox();
     void clearInlineContent();
     void releaseCaches();
-    std::optional<size_t> lastLineIndexForContentHeight() const;
 
     LayoutUnit physicalBaselineForLine(const InlineDisplay::Line&) const;
     
